fixed issue with hero on small laptop -size  screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-:root {
-  --color-primary: #f5f5f5;
-  --color-secondary: #2575fc;
-}
+
 
 * {
   margin: 0;
@@ -13,8 +10,6 @@
 }
 
 body {
-  /* bg gradient bubble gum blue to pink */
-
   background: linear-gradient(pink 0%, white 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -462,6 +457,16 @@ footer {
   display: flex;
   gap: 1rem;
   font-size: 12px;
+}
+
+@media screen and ( max-height: 750px ) {
+
+
+  .hero-image{
+    display: none;
+  }
+
+
 }
 
 @media screen and (max-width: 768px) {
